--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Caixa de Pesquisa -->
     <div class="search-box" style="text-align:center; margin: 20px;">
-        <input type="text" id="search-input" placeholder="Pesquisar por bairro..." style="padding: 10px; width: 80%; max-width: 400px;">
+        <input type="text" id="search-input" placeholder="Pesquisar por..." style="padding: 10px; width: 80%; max-width: 400px;">
     </div>
 
     <main>
@@ -480,7 +480,9 @@
         <section id="rotas-diretas">
             <h2>ROTAS DIRETAS</h2>
             <div class="botoes-container">
-                <a href="#" class="myButton" data-section="Bairro Linha verde Rua Orquidea
+                <div class="caixa-conteudo">
+                    <h3>FILTRAGEM – MEDICINA – LABORATÓRIO – OFICINA AVANÇADA</h3>
+                    <a href="#" class="myButton" data-section="Bairro Linha verde Rua Orquidea
                 Av. Redenção Rua Novo Progresso 
                 Av.Das FloresRua 10. Bairro 
                 Paraiso Av. Jânio Quadro Rua Delfim 
@@ -497,6 +499,7 @@
                 Sena. Bairro Rio Verde Rua Do 
                 Comercio Av. JK  PA 275 Rua E Rua 
                 16 Faruk Salmen.">ROTA-01</a>
+
                 <a href="#" class="myButton" data-section="BairroNova CarajásRua C28 Rua 
                 C31 Rua C 41 Rua C 33 Rua 140 Rua
                 135 Rua 90 AV.Nova CarajásAv. 
@@ -508,6 +511,7 @@
                 Bairro Alto Bonito  PA-160 Rua 
                 Monarquia Rua 11 PA-160 Faruk 
                 Salmen">ROTA-02</a>
+
                 <a href="#" class="myButton" data-section="BairroCidade Jardim Av. Q D Av. 
                 Jatobá Av. Castanheira Av. ParicáAv. 
                 F Av.W Av. V Av.Dos Buritis.
@@ -520,6 +524,8 @@
                 Rua G1 Rua F1 Rua F6 Av. Jatobá Av.
                 C. Bairro Vele Do Sol Av Dubay PA
                 160.">ROTA-03</a>
+
+
                 <a href="#" class="myButton" data-section="BairroMorada Nova Av. Bom
                 Jardim. BairroBela Vista Rua F.
                 Peixoto Rua C. Gomes Rua
@@ -539,6 +545,7 @@
                 rio Ipiranga Rio Pranga Rio
                 Amparai Rio Iguaçu Rua Rio
                 Uruguai Rua Espanha">ROTA-04</a>
+
                 <a href="#" class="myButton" data-section="Bairro Residencial Nova Carajás 
                 Rua 90 Rua Serra Norte Rua Serra 
                 Sereno Rua 103 Rua Araguaia Rua 
@@ -553,6 +560,7 @@
                 Minerios Av. 01 Bairro Polo 
                 Moveleiro Rua 35 Av. Castanheira
                 PA160">ROTA-05</a>
+
                 <a href="#" class="myButton" data-section="Bairro Rio Verde Rua Minas Gerais
                 Rua Beira Rio Rua Perimetral Norte.
                 Bairro Liberdade I e II Rua Santa
@@ -570,6 +578,7 @@
                 Carajás Bairro Altamira Rua
                 Amsterdã Bairro Vila Rica Rua
                 Amsterdã Av. Havana.">ROTA-06</a>
+
                 <a href="#" class="myButton" data-section="Shopping Av. Ana Carina. Bairro 
                 Alvorá Av Do Canal Av; Canal 05 
                 Rua Canal 01  Av. Ana Karina.
@@ -586,6 +595,7 @@
                 Rua Kanoe Av. Potiguar Av. Milton 
                 Riberio Av.G Av. Rikbaktsa Bairro 
                 Cidade Jardim Av. D Av. G PA-160">ROTA-07</a>
+
                 <a href="#" class="myButton" data-section="BairroNova Esperança Vs-10.
                 Bairro Brasilia Rua Minas. Bairro 
                 Jardim Planalto Rua Sebastião 
@@ -602,7 +612,10 @@
                 Rua Paulo AfonsoRua Marabá 
                 BairroRio verde Rua Rio de janeiro 
                 Rua 16 Rua F Rua E Rua 16.">ROTA-08</a>
-                <a href="#" class="myButton" data-section="Bairro Linha verde Rua Orquidea
+                </div>
+                  <div class="caixa-conteudo">
+                    <h3>03 ALFA – CASTANHEIRA – CMD – NOVA OFICINA</h3>
+                    <a href="#" class="myButton" data-section="Bairro Linha verde Rua Orquidea
                 Av. Redenção Rua Novo Progresso 
                 Av.Das FloresRua 10. Bairro 
                 Paraiso Av. Jânio Quadro Rua Delfim 
@@ -628,6 +641,7 @@
                 Cidade Jardim Av. Dos Ipês Av. F
                 Av.Dos Buritis BairroDos Minerios 
                 Av. 01 PA-160">ROTA-10</a>
+
                 <a href="#" class="myButton" data-section="BairroCidade Jardim Av. Q D Av. 
                 Jatobá Av. Castanheira Av. ParicáAv. 
                 F Av.W Av. V Av.Dos Buritis.
@@ -635,6 +649,7 @@
                 Vila Nova Av.02. BairroDos 
                 Minerios Av. 01 PA-160 Bairro 
                 Popular II Av. Rio Itacaiunas">ROTA-11</a>
+
                 <a href="#" class="myButton" data-section="BairroMorada Nova Av. Bom
                 Jardim. BairroBela Vista Rua 
                 Floriano Peixoto Rua Carlos
@@ -648,6 +663,7 @@
                 BairroBeira Av. Rio Grande Av. F
                 Av.A  Alto Bonito Rua 11 PA-160 
                 Faruk Salmen">ROTA-12</a>
+
                 <a href="#" class="myButton" data-section="Bairro Residencial Nova Carajás 
                 Rua 90 Rua Serra Norte Rua Serra 
                 Sereno Rua 103 Rua Araguaia Rua 
@@ -662,6 +678,7 @@
                 Minerios Av. 01 Bairro Polo 
                 Moveleiro Rua 35 Av. Castanheira
                 PA160">ROTA-13</a>
+
                 <a href="#" class="myButton" data-section="Bairro Da Paz. Rua do Arame Rua Rio 
                 de Janeiro Rua Beira Rio Bairro Rio
                 Verde Rua Beira Rio Rua Perimetral
@@ -731,7 +748,10 @@
                 Jatobá Rua G1 Rua F1 Rua F6
                 Av.Jatobá Av. C. Bairro Vele 
                 Do Sol Av. Dubai PA 160">ROTA-18</a>
+
+                </div>
             </div>
+
         </section>
     </main>
     
